--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
     <description>demo-sercurity-ratelimit</description>
     <properties>
         <java.version>1.8</java.version>
+        <log4j2.version>2.17.1</log4j2.version>
     </properties>
     <dependencies>
         <dependency>
@@ -90,6 +91,17 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-configuration-processor</artifactId>
             <version>2.7.8</version>
+        </dependency>
+        <dependency>
+            <groupId>commons-net</groupId>
+            <artifactId>commons-net</artifactId>
+            <version>3.9.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.mockftpserver</groupId>
+            <artifactId>MockFtpServer</artifactId>
+            <version>2.7.1</version>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 
